# prd-loop

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  README.md  README_EN.md  install.sh  pyproject.toml  uninstall.sh
.claude-plugin/: marketplace.json
commands/: discuss_spec.md  structured_repo.md
docs/: design-philosophy.md  prd-protocol.md
src/eva_01/: __init__.py  circuit_breaker.py  config.py  logger.py  observe_impl.py  response_analyzer.py  session_logger.py  spec_to_prd.py
src/eva_01/prompt/: __init__.py  conversion.py  implementation.py  observe.py
src/prd_loop/: __init__.py  claude_cli.py  config.py  impl_prd.py  logger.py  observe_impl.py  prd_schema.py  rate_limiter.py  session_logger.py  spec_to_prd.py
src/prd_loop/prompt/: __init__.py  conversion.py  observe.py
templates/: PROMPT.md
