[project]
name = "eva-01"
version = "0.1.0"
description = "EVA-01: Automated life testing platform prototype"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/eva_01"]

[project.scripts]
spec-to-prd = "eva_01.spec_to_prd:main"
impl-prd = "eva_01.impl_prd:main"
